--- a/TodoList/src/app/app.component.html
+++ b/TodoList/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
-  <h1>To-Do List</h1>
-  <app-task></app-task>
+  <h1>Welcome to TodoList app</h1>
 </div>
+<router-outlet></router-outlet>
+
