--- a/TodoList/src/app/task/task.component.html
+++ b/TodoList/src/app/task/task.component.html
@@ -1,10 +1,14 @@
 <div class="container">
   <h1 class="my-4">To-Do List</h1>
 
-  <form class="form-inline mb-4" (submit)="addTask(newTask.value)">
+  <form class="form-inline mb-4">
     <input type="text" #newTask class="form-control mr-2" placeholder="Enter new task" required>
-    <button type="submit" class="btn btn-primary">Add Task</button>
-  </form>
+    <button type="submit"
+            class="btn btn-primary"
+            (click)="addTask(newTask)"
+    >Add Task
+    </button>
+    </form>
 
   <ul class="list-group">
     <li *ngFor="let task of tasks; let i = index" class="list-group-item d-flex justify-content-between align-items-center">
@@ -13,7 +17,9 @@
         <span [ngClass]="{completed: task.completed}">{{task.title}}</span>
       </div>
       <button (click)="deleteTask(i)" class="btn btn-danger">Delete</button>
+      <button (click)="archiveTasks(i)" class="btn btn-warning mr-2">Archive</button>
     </li>
   </ul>
+  <button type="button" class="btn btn-info" routerLink="/archived-tasks">Go to Archived Tasks</button>
 </div>
 
